--- a/public/assets/css/argon.css
+++ b/public/assets/css/argon.css
@@ -26666,6 +26666,10 @@ table.dataTable tbody > tr.selected
     padding-left: 1.5rem;
 }
 
+.dt-center {
+    text-align: center;
+}
+
 .dataTables_length .form-control
 {
     margin: 0 .375rem;
